--- a/src/pages/LocationDetails/styles.module.scss
+++ b/src/pages/LocationDetails/styles.module.scss
@@ -26,4 +26,15 @@
         margin: 20px auto;
         font-size: 1.2rem;
     }
+    select{
+        width: 100%;
+        margin: 20px 15px;
+        padding: 10px;
+        border: 0;
+        border-bottom: 2px solid grey;
+        &:focus{
+            outline: none;
+            border-color: $primary;
+        }
+    }
 }
