--- a/src/common/styles.module.scss
+++ b/src/common/styles.module.scss
@@ -93,7 +93,7 @@
 
     .form__number__group{
       width: 100%;
-      margin: 0 15px;
+      margin: 15px 15px 10px;
     }
     input[type='number']::-webkit-outer-spin-button,
     input[type='number']::-webkit-inner-spin-button{
@@ -143,5 +143,19 @@
       h1{
         font-size: 3rem;
       }
+    }
+  }
+  .selectContainer{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    select{
+      font-size: 1.2rem;
+      color: $gray;
+      margin: 20px 15px 0 !important;
+    }
+    span{
+      color: red;
+      margin: 0 15px;
     }
   }
